--- a/stilark.css
+++ b/stilark.css
@@ -22,7 +22,7 @@ header {
 
  #grad1 {
     height: 500px;
-  background: url(Bilder/Untiteled_artwork.jpg) no-repeat center;
+  background: url(Bilder/Untitled_Artwork.jpg) no-repeat center;
   background-size: cover;
   padding-top: 10%;
   }
