--- a/stilark.css
+++ b/stilark.css
@@ -28,10 +28,13 @@ body {
 
  .Meny { 
      grid-area: Meny;
+     
+     nav {
         display: flex;
         background-color: rgb(0, 0, 0);
         justify-content: center;
         font-size: 20px;
+     }
 
     nav ul { 
         list-style-type: none;
