--- a/stilark.css
+++ b/stilark.css
@@ -14,7 +14,7 @@ body {
     "Ads Main Main Main Events"
     "Footer Footer Footer Footer Footer";
 }
- Header{
+h1{
      color: white;
         justify-content: center;
         align-items: center;
