--- a/stilark.css
+++ b/stilark.css
@@ -29,8 +29,8 @@ h1{
 
  .Meny { 
      grid-area: Meny;
-     
-     nav {
+ }
+    nav { 
         display: flex;
         background-color: rgb(0, 0, 0);
         justify-content: center;
