--- a/stilark.css
+++ b/stilark.css
@@ -23,7 +23,7 @@ h1{
 
 #grad1 {
     height: 500px;
-  background: url(Bilder/Lokale2.jpg) no-repeat center;
+  background: url(Bilder/Untitled_Artwork.jpg) no-repeat center;
   background-size: cover;
   padding-top: 10%;
   }
