--- a/stilark.css
+++ b/stilark.css
@@ -15,10 +15,12 @@ body {
     "Footer Footer Footer Footer Footer";
 }
 h1{
+  display: flex;
      color: white;
         justify-content: center;
         align-items: center;
-        font-size: 50px;
+        font-size: 100px;
+        flex: center;
 }
 
 #grad1 {
