--- a/stilark.css
+++ b/stilark.css
@@ -1,42 +1,51 @@
 body {
     background-color: black;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
  }
-.grid-container {
+ .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 3px 3px;
   grid-template-areas:
     "Header Header Header Header Header"
+    "Header Header Header Header Header"
     "Meny Meny Meny Meny Meny"
-    "Ads Main Main Main Events"
-    "Ads Main Main Main Events"
-    "Ads Main Main Main Events"
+    "Main Main Main Side Side"
+    "Main Main Main Side Side"
+    "Main Main Main Side Side"
+    "Bilder Bilder Bilder Bilder Bilder"
+    "Bilder Bilder Bilder Bilder Bilder"
     "Footer Footer Footer Footer Footer";
 }
-h1{
-  display: flex;
-     color: white;
-        justify-content: center;
-        align-items: center;
-        font-size: 100px;
-        flex: center;
-}
 
-#grad1 {
-    height: 500px;
-  background: url(Bilder/Untitled_Artwork.jpg) no-repeat center;
-  background-size: cover;
-  padding-top: 10%;
+    /*Header*/
+  .Header { 
+      grid-area: Header;
+      display: flex;
+      color: white;
+      justify-content: center;
+      align-items: center;
+      font-size: 70px;
+      flex: center;
   }
+    #grad1 {
+      height: 500px;
+      background: url(Bilder/Untitled_Artwork.jpg) no-repeat center;
+      background-size: cover;
+      padding-top: 10%;
+    }
 
-    nav { 
+  /*Meny*/
+  .Meny { grid-area: Meny; }
+      nav { 
         display: flex;
         background-color: rgb(0, 0, 0);
         justify-content: center;
         font-size: 20px;
-     }
-
+    }
     nav ul { 
         list-style-type: none;
         margin: 0;
@@ -44,11 +53,9 @@ h1{
         overflow: hidden;
         background-color: rgb(0, 0, 0);
       }
-
     nav li {
         float: left;
     }
-
     nav li a { 
         display: block;
         color: rgb(255, 255, 255);
@@ -57,20 +64,31 @@ h1{
         text-decoration: none;
 
     }
-
     nav li a:hover { 
         background-color: rgb(206, 206, 206);
     }
+    .Main {
+      background-color: rgb(255, 0, 221);
+    grid-area: Main; 
+  }
+    
+    .Side {
+      background-color: rgb(128, 0, 0);
+      grid-area: Side;
+    }
 
-    .Header { grid-area: Header;}
+    .Bilder { 
+      background-color: rgb(255, 255, 255);
+      grid-area: Bilder; 
+    }
 
-    .Meny { grid-area: Meny;}
-
-    .Events { grid-area: Events; }
-
-    .Ads { grid-area: Ads; }
-
-    .Main { grid-area: Main; }
-
-    .Footer { grid-area: Footer; }
-
+    .Footer {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 0px 0px;
+      grid-template-areas:
+        ". . ."
+        ". . .";
+      grid-area: Footer;
+    }
