--- a/stilark.css
+++ b/stilark.css
@@ -7,8 +7,8 @@ body {
  .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 3px 3px;
+  grid-template-rows: 1fr 1fr 0fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 10px 20px;
   grid-template-areas:
     "Header Header Header Header Header"
     "Header Header Header Header Header"
@@ -39,7 +39,9 @@ body {
     }
 
   /*Meny*/
-  .Meny { grid-area: Meny; }
+  .Meny {
+    grid-area: Meny;
+  }
       nav { 
         display: flex;
         background-color: rgb(0, 0, 0);
@@ -83,13 +85,6 @@ body {
     }
 
     .Footer {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      gap: 0px 0px;
-      grid-template-areas:
-        ". . ."
-        ". . .";
       grid-area: Footer;
     }
 
