--- a/stilark.css
+++ b/stilark.css
@@ -94,7 +94,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 0fr 1fr 1fr 1fr 1fr;
-    gap: 0px 0px;
+    gap: 5spx 0px;
     grid-template-areas:
       "Header Header"
       "Meny Meny"
