--- a/stilark.css
+++ b/stilark.css
@@ -41,7 +41,11 @@ body {
   /*Meny*/
   .Meny {
     grid-area: Meny;
-  }
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
+    }
       nav { 
         display: flex;
         background-color: rgb(0, 0, 0);
@@ -51,7 +55,7 @@ body {
     nav ul { 
         list-style-type: none;
         margin: 0;
-        padding: 0;
+        padding: 20px;
         overflow: hidden;
         background-color: rgb(0, 0, 0);
       }
@@ -67,7 +71,7 @@ body {
 
     }
     nav li a:hover { 
-        background-color: rgb(206, 206, 206);
+        background-color: rgb(43, 43, 43);
     }
     .Main {
       background-color: rgb(255, 0, 221);
