--- a/stilark.css
+++ b/stilark.css
@@ -33,7 +33,7 @@ body {
   }
     #grad1 {
       height: 100vh;
-      background: url(Bilder/Untitled_Artwork\ \(1\).jpg) no-repeat center;
+      background: url(Bilder/IMG_0007.jpg) no-repeat center;
       background-size: cover;
       padding-top: 10%;
     }
