--- a/stilark.css
+++ b/stilark.css
@@ -49,8 +49,8 @@ body {
       nav { 
         display: flex;
         background-color: rgb(0, 0, 0);
-        justify-content: center;
         font-size: 20px;
+        justify-content: center;
     }
     nav ul { 
         list-style-type: none;
@@ -74,6 +74,12 @@ body {
         background-color: rgb(43, 43, 43);
     }
 
+    #logo {
+      font-size: 35px;
+      font-weight: bold;
+      transition: 0.4s;
+    }
+    
     .Main {
       background-color: rgb(31, 31, 31);
     grid-area: Main; 
