--- a/stilark.css
+++ b/stilark.css
@@ -47,10 +47,8 @@ body {
     opacity: 80%;
     }
       nav { 
-        display: flex;
         background-color: rgb(0, 0, 0);
-        font-size: 20px;
-        justify-content: center;
+        font-size: 25px;
     }
     nav ul { 
         list-style-type: none;
@@ -75,14 +73,14 @@ body {
     }
 
     #logo {
-      font-size: 35px;
-      font-weight: bold;
       transition: 0.4s;
-      flex: space-around;
+      background: url(Bilder/IMG_0012.jpg) no-repeat center;
+      width: 5px;
+      height: 5px;
     }
 
-    #meny{
-      flex: space-around;
+    #meny{    
+      float: right;
     }
 
     .Main {
