--- a/stilark.css
+++ b/stilark.css
@@ -74,13 +74,15 @@ body {
 
     #logo {
       transition: 0.4s;
-      background: url(Bilder/IMG_0012.jpg) no-repeat center;
-      width: 5px;
-      height: 5px;
+      background: url(Bilder/IMG_0012.jpg);
+      background-size: 100% 100%;
+      width: 350px;
+      height: 150px;
     }
 
     #meny{    
       float: right;
+      padding-top: 55px;
     }
 
     .Main {
