--- a/stilark.css
+++ b/stilark.css
@@ -94,6 +94,7 @@ body {
       background-color: rgb(0, 0, 0);
       grid-area: Side;
     }
+
    h1{ 
       padding-left: 5%;
     }
@@ -128,7 +129,6 @@ body {
       grid-template-columns: auto 1fr;
       margin: 2rem;
     }
-
 
     .days {
       display: grid;
@@ -219,11 +219,11 @@ body {
       font-weight: 100;
     }
 
+    /*kart*/
     .kart{
       text-align: center;
+      padding: 30px;
     }
-
-
 
     /* Extra small - Large devices */
     @media only screen and (max-width: 992px) {
@@ -240,5 +240,5 @@ body {
           "Bilder Bilder"
           "Footer Footer";
       }
- 
+
     }
