--- a/UnderSide.css
+++ b/UnderSide.css
@@ -112,9 +112,14 @@ body {
       justify-content: space-around;
       padding: 15px;
     }
-    
+
+    /*kart*/
     .kart{
       text-align: center;
+      border-radius: 25px;
+      width: 100%;
+      height: 60%;
+      padding: 50px;
     }
 
 
