--- a/stilark.css
+++ b/stilark.css
@@ -222,6 +222,9 @@ body {
     /*kart*/
     .kart{
       text-align: center;
+      border-radius: 25px;
+      width: 100%;
+      height: 60%;
       padding: 30px;
     }
 
