--- a/stilark.css
+++ b/stilark.css
@@ -28,6 +28,7 @@ body {
       color: white;
       justify-content: center;
       align-items: center;
+      font-family: 'Courier New', Courier, monospace;
       font-size: 70px;
       flex: center;
   }
