--- a/UnderSide.css
+++ b/UnderSide.css
@@ -7,7 +7,7 @@ body {
  .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0fr 0fr 1fr 1fr 1fr 1fr 1fr 1fr 0fr;
+  grid-template-rows: 0fr 0fr 1fr 1fr 1fr 1fr 0fr;
   gap: 10px 20px;
   grid-template-areas:
     "Meny Meny Meny Meny Meny"
@@ -16,8 +16,6 @@ body {
     "Main Main Main Side Side"
     "Main Main Main Side Side"
     "Main Main Main Side Side"
-    "Bilder Bilder Bilder Bilder Bilder"
-    "Bilder Bilder Bilder Bilder Bilder"
     "Footer Footer Footer Footer Footer";
 }
 
